feat: implement Phase 7 dynamic resource optimization, auto-scaling and modpack distribution